fix lack of paths шin swagger doc
